--- a/Site/style.css
+++ b/Site/style.css
@@ -1,44 +1,63 @@
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
+button img{
+    width: 30px;
+    height: 30px;
+}
+  
+.navbar {
+    overflow: hidden;
+}
+  
+.navbar a {
+    float: left;
     font-size: 16px;
-    border: none;
-    cursor: pointer;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
 }
-
+  
 .dropdown {
-    position: relative;
-    display: inline-block;
+    float: left;
+    overflow: hidden;
 }
-
+  
+.dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: purple;
+    font-family: inherit;
+    margin: 0;
+}
+  
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: grey;
+}
+  
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-
+  
 .dropdown-content a {
+    float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: left;
 }
-
-.dropdown-content a:hover {background-color: #f1f1f1}
-
+  
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+  
 .dropdown:hover .dropdown-content {
     display: block;
-}
-
-.dropdown:hover .dropbtn {
-    background-color: #3e8e41;
-}
-
-.icon{
-    width: 100px;
-    height: 100px;
 }
