--- a/Site/style.css
+++ b/Site/style.css
@@ -263,8 +263,136 @@ input[type="submit"]:hover {
 }
 
 #inicial {
-    margin-top: -400px;
+    margin-top: 550px;
     transition: transform 1s ease-in-out;
-    background-color:#8F85A6;
+}
+
+#inicial .temp{
+    width: 100%;
 }
   
+/*tattos em destaque*/
+
+#galeria {
+    padding: 30px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 10px;
+}
+  
+#galeria img {
+    width: 100%;
+    height: 270px;
+    transition: transform 0.3s ease-in-out;
+}
+  
+#galeria img:hover {
+    transform: scale(1.2);
+}
+  
+/*sobre os tatuadores*/
+
+.container {
+    margin: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    margin: 20px;
+    padding-right: 150px;
+}
+
+.tatuador {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+h2 {
+    color: #ccc;
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+p {
+    color: #ccc;
+    margin: 0;
+    font-size: 16px;
+}
+
+/*avaliações*/
+
+.avaliacoes{
+    border-radius: 10px;
+    background-color: #1a1a1a;
+    padding: 70px;
+    margin: 50px;
+}
+
+.avaliacao{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.avaliacao img {
+    width: 50px;
+    padding: 10px;
+    border-radius: 50%;
+}
+
+.avaliacao .aval{
+    display: block;
+    margin-top: 10px;
+}
+
+.avaliacoes #avl{
+    margin-top: -50px;
+    color: #ccc;
+}
+
+h3{
+    color: #ccc;
+}
+
+.avaliacoes input{
+    margin-top: 30px;
+    width: 80%;
+    height: 40px;
+}
+
+.avaliacoes input[type="submit"]{
+    width: 10%;
+    height: 60px;
+    background-color: #9D86BC;
+}
+
+.avaliacoes input[type="submit"]:hover{
+    background-color: #281D40;
+}
+
+/*titulo*/
+
+#titulo {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    font-size: 5em;
+    font-family: Arial, sans-serif;
+    color: #ccc;
+}
