--- a/Site/style.css
+++ b/Site/style.css
@@ -188,7 +188,7 @@ nav li:nth-child(5) a {
     padding: 100px;
 }
 
-.portp{
+.portp{ /*centralizar isso*/
     border: 0px;
     border-radius: 50%;
     background-color: inherit;
@@ -293,7 +293,7 @@ input[type="submit"]:hover {
 /*sobre os tatuadores*/
 
 .container {
-    margin: 100px;
+    margin: 50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -321,17 +321,20 @@ input[type="submit"]:hover {
     justify-content: center;
 }
 
-h2 {
+.content h2 {
     color: #ccc;
     margin: 0;
     font-size: 24px;
     font-weight: bold;
+    margin: 15px;
 }
 
-p {
+.content p {
     color: #ccc;
-    margin: 0;
+    margin: 15px;
     font-size: 16px;
+    max-width: 200px;
+    text-align: justify;
 }
 
 /*avaliações*/
@@ -385,6 +388,11 @@ h3{
     background-color: #281D40;
 }
 
+.avaliacao p{
+    max-width: 50%;
+    color: #ccc;
+}
+
 /*titulo*/
 
 #titulo {
@@ -413,4 +421,28 @@ h3{
 .erro img{
     width: 100px;
     display: inline-block
+}
+  
+.adminButton{
+    width: 150px;
+    height: 60px;
+    background-color: #9d86bc00;
+    border-radius: 10%;
+    margin: 30px;
+    border: 2px solid #9d86bc;
+    color: #9d86bc;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.adminButton:hover{
+    background-color: #281D40;
+}
+
+.adminButton img{
+    border-radius: 0%;
+}
+
+#cad{ /*editar isso*/
+    background-color: #000000;
 }
