--- a/Site/style.css
+++ b/Site/style.css
@@ -200,14 +200,14 @@ nav li:nth-child(5) a {
 
 /*login / cadastro / orçamento*/
 .login-screen {
+    margin: auto;
     margin-top: -600px;
-    margin-left: 30%;
     align-content: center;
     transition: transform 1s ease-in-out;
     background-color: #f7e2f5;
     border-radius: 10px;
     padding: 20px;
-    max-width: 400px;
+    width: 30%;
     text-align: center;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
@@ -260,6 +260,12 @@ input[type="submit"]:hover {
 .login-screen button{
     border: 0;
     background:none;
+}
+
+@media screen and (max-width: 768px) {
+    .login-screen {
+        width: 90%;
+    }
 }
 
 #inicial {
