--- a/SeivaBruta/projeto/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/SeivaBruta/projeto/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -1,24 +1,30 @@
-
-<!-- Página de template de exemplo -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets">
-<!-- Indica-se importar scripts Javascript e arquivos CSS externos dentro do head de um template -->
+
 <h:head>
-	<!-- Nome que aparecerá na aba do navegador para o usuário -->
-    <title>projeto</title>
+
+    <title>Seiva Bruta</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <!-- <h:outputStylesheet name="css/screen.css" />  -->
+
 </h:head>
 <h:body>
     <div id="container">
         <div id="content">
-            <ui:insert name="content">
-                    <!-- Conteúdo das páginas que usarão o template será inserido aqui -->
-         </ui:insert>
+            <ui:insert name="content"></ui:insert>
         </div>
+        
+        <nav>
+            <ul>
+                <li id="logo"><a href="index.xhtml"><img src="resources/img/icon.png"></img></a></li>
+                <li><a href="events.xhtml">EVENTOS</a></li>
+                <li><a href="budgets.xhtml">SOLICITAR ORÇAMENTO</a></li>
+                <li><a href="portfolio.xhtml">PORTIFÓLIO</a></li>
+                <li><a href="login.xhtml">LOGIN</a></li>
+            </ul>
+        </nav>
+        <!--
         <div id="footer">
             <p>
             	<h:form>
@@ -28,6 +34,7 @@
                 </h:form>
             </p>
         </div>
+        -->
     </div>
 </h:body>
 </html>
